@@ -1,5 +1,10 @@
 2013-05-10  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-mkrescue.in: Replace `STR' with `STRING' to avoid adding
+	yet another string (pun intended) to translate.
+
+2013-05-10  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* po/POTFILES-shell.in: Autogenerate it.
 
 2013-05-10  Vladimir Serbinenko  <phcoder@gmail.com>
